--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ embedded-hal = "1.0.0"
 
 [dev-dependencies]
 embedded-hal-mock = { version = "0.11.1", default-features = false, features = ["eh1"] }
+
+[profile.release]
+overflow-checks = true
