fix readme license info and adjust manifest desc wording

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "tlv320dac3100"
 version = "0.1.0"
 edition = "2024"
 authors = ["Jonathan D. Baker <jonathan@ardent.tech>"]
-description = "A driver for Texas Instruments TLV320DAC3100 module."
+description = "A driver for the Texas Instruments TLV320DAC3100 module."
 keywords = ["embedded", "embedded-hal-driver", "dac", "analog", "digital"]
 categories = ["embedded", "no-std"]
 repository = "https://github.com/ardentTech/tlv320dac3100"
